fixed more spacing and css for following/followers

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -58,3 +58,14 @@ body {
   height:100%;
   border: 10px solid #ffffff;
 }
+
+#followAvatar {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius-bottomright: 10px;
+  -webkit-border-bottom-right-radius: 10px;
+  border-radius: 5px;
+  width:50%;
+  height:50%;
+  border: 10px solid #ffffff;
+}
